--- a/crudapp/templates/home.html
+++ b/crudapp/templates/home.html
@@ -6,3 +6,10 @@
     <br><br>
     <input type="submit" value="count!" />
 </form>
+
+<br>
+{% for blog in blogs.all %}
+    <h1>{{ blog.title }}</h1>
+    <p>{{ blog.pub_date }}</p>
+    <p>{{ blog.body }}</p><a href="{% url 'detail' blog.id %}">자세히 보기</a>
+{% endfor %}
