--- a/crudapp/templates/home.html
+++ b/crudapp/templates/home.html
@@ -9,7 +9,7 @@
 
 <br>
 {% for blog in blogs.all %}
-    <h1>{{ blog.title }}</h1>
-    <p>{{ blog.pub_date }}</p>
-    <p>{{ blog.body }}</p><a href="{% url 'detail' blog.id %}">자세히 보기</a>
+    <h1>{{ blog.title }}</h1>    
+    <p>{{ blog.pub_date | date:"Y-m-d H:i:s" }}</p>
+    <p>{{ blog.summary  }}<a href="{% url 'detail' blog.id %}">...자세히 보기</a></p>
 {% endfor %}
