--- a/crudapp/templates/detail.html
+++ b/crudapp/templates/detail.html
@@ -1,4 +1,5 @@
-<h1>detail page</h1>
+{% extends 'base.html' %}  
+{% block content %} 
 
 
     <h1>{{ blog.title }}</h1>
@@ -7,3 +8,5 @@
 
 
     <a href="{% url 'home' %}">돌아가기</a>
+
+{% endblock %}
