--- a/crudapp/templates/home.html
+++ b/crudapp/templates/home.html
@@ -1,15 +1,27 @@
-<h1>워드 카운트!</h1>
+{% extends 'base.html' %}  
+{% block content %} 
+    {% for blog in blogs.all %}
+    <div class="container">
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">{{ blog.title }}</h5>
+                <p>{{ blog.pub_date | date:"Y-m-d H:i:s" }}</p>
+                <p class="card-text">{{ blog.summary  }}...</p>
+                <a href="{% url 'detail' blog.id %}" class="btn btn-primary">자세히 보기</a>
+            </div>
+        </div>
+    </div>        
+    {% endfor %}
+</body>
+{% endblock %}
 
+<!--
 <br><br>
 <form action="{% url 'new' %}">
     <textarea cols="40" rows="10" name='fulltext'></textarea>
     <br><br>
     <input type="submit" value="count!" />
 </form>
-
 <br>
-{% for blog in blogs.all %}
-    <h1>{{ blog.title }}</h1>    
-    <p>{{ blog.pub_date | date:"Y-m-d H:i:s" }}</p>
-    <p>{{ blog.summary  }}<a href="{% url 'detail' blog.id %}">...자세히 보기</a></p>
-{% endfor %}
+-->
