--- a/crudapp/templates/detail.html
+++ b/crudapp/templates/detail.html
@@ -1,12 +1,16 @@
-{% extends 'base.html' %}  
-{% block content %} 
+{% extends 'base.html' %}
 
+{% block content %}
 
-    <h1>{{ blog.title }}</h1>
-    <p>{{ blog.pub_date }}</p>
-    <p>{{ blog.body }}</p> 
-
-
-    <a href="{% url 'home' %}">돌아가기</a>
+    <div class="container"> 
+        <div class="card">
+          <div class="card-body">
+            <h1>{{ blog.title }}</h1>
+            <p>{{ blog.pub_date }}</p>
+            <p>{{ blog.body }}</p> 
+          </div>
+        </div>
+        </div>
+        <br>
 
 {% endblock %}
