--- a/crudapp/templates/detail.html
+++ b/crudapp/templates/detail.html
@@ -10,7 +10,9 @@
             <p>{{ blog.body }}</p> 
           </div>
         </div>
-        </div>
-        <br>
+    </div>
+    <br>
+    <a href="{% url 'update' blog.id %}">수정하기</a>
+    <a href="{% url 'delete' blog.id %}">삭제하기</a>
 
 {% endblock %}
