--- a/crudapp/templates/home.html
+++ b/crudapp/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}  
 {% block content %} 
-    {% for blog in blogs.all %}
+    {% for blog in posts %}
     <div class="container">
         <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
@@ -13,15 +13,21 @@
         </div>
     </div>        
     {% endfor %}
+
+    {%if posts.has_previous%}
+    <a href="?page=1">First</a>
+    <a href="?page={{posts.previous_page_number}}">Previous</a>
+    {%endif%}
+
+    <span>{{posts.number}}</span>
+    <span>of</span>
+    <span>{{posts.paginator.num_pages}}</span>
+
+    {%if posts.has_next%}
+    <a href="?page={{posts.next_page_number}}">Next</a>
+    <a href="?page={{posts.paginator.num_pages}}">Last</a>
+    {%endif%}
+
 </body>
 {% endblock %}
 
-<!--
-<br><br>
-<form action="{% url 'new' %}">
-    <textarea cols="40" rows="10" name='fulltext'></textarea>
-    <br><br>
-    <input type="submit" value="count!" />
-</form>
-<br>
--->
