--- a/crudapp/templates/detail.html
+++ b/crudapp/templates/detail.html
@@ -16,6 +16,7 @@
             <br>
             <a href="{% url 'update' blog.id %}"><img src="/static/update.png" alt="수정" width="30"></a>
             <a href="{% url 'delete' blog.id %}"><img src="/static/delete.png" alt="삭제" width="30"></a>
+            <a href="{% url 'some_view' %}">pdf다운</a>
           </div>
         </div>
     </div>
